@@ -7,7 +7,11 @@
 					http://gollem.swi.psy.uva.nl/bugzilla/
 					--------------------------------------
 
-  * FIXED: Bug#129: dummy bagof/setof choicepoint.  Holger Kanwischer.
+  * FIXED: Bug#128: memory deallocation problem in library(memfile).
+    MS-Windows only.  Added Sfree() to free memory from the right
+    pool.  Holger Kanwischer.
+
+  * FIXED: Bug#129: determinism in bagof/setof.  Holger Kanwischer.
 
   * FIXED: Bug#125: rename_file/2 if source and destination are the same.
     Dr. Werner Wolff.
